--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="icon" href="%PUBLIC_URL%/faviconV2.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="theme-color" content="#000000" />
+		<meta name="theme-color" content="#FFFFFF" />
 		<meta
-			name="description"
-			content="Web site created using create-react-app"
+			name="Sound Selections | Ableton"
+			content="Staś Werno's Ableton 2022 Front-End Coding Exercise submission."
 		/>
 		<title>Sound Selections | Ableton</title>
 	</head>
