add audio functionality

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%PUBLIC_URL%/faviconV2.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="theme-color" content="#FFFFFF" />
+		<meta name="theme-color" content="#ffffff" />
 		<meta
 			name="Sound Selections | Ableton"
 			content="Staś Werno's Ableton 2022 Front-End Coding Exercise submission."
